--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -806,4 +806,5 @@
     <string name="lbl_troubleshooting_warning">Não active as opções abaixo, a menos que o programador da aplicação lho solicite explicitamente.</string>
     <string name="info_tap_to_select">Toque para selecionar.</string>
     <string name="lbl_tab_alternative_editions_long">Edições alternativas</string>
+    <string name="warning_restart_required">É necessário reiniciar a aplicação</string>
 </resources>
