--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1516,4 +1516,5 @@
     <string name="lbl_troubleshooting_warning">Vui lòng không bật các tùy chọn bên dưới trừ khi nhà phát triển ứng dụng yêu cầu làm như vậy một cách rõ ràng.</string>
     <string name="info_tap_to_select">Nhấn để chọn.</string>
     <string name="lbl_tab_alternative_editions_long">Ấn.bản khác</string>
+    <string name="warning_restart_required">Cần phải khởi động lại ứng dụng</string>
 </resources>
