--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -20,7 +20,8 @@
   --><!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
-<!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
+<!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine -->
+<resources xmlns:tools="http://schemas.android.com/tools">
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d książka</item>
         <item quantity="few">%1$d książki</item>
@@ -780,7 +781,8 @@
     <string name="info_progress_page_x_of_y">Strona: %1$d z %2$d</string>
     <string name="lbl_track_progress_long">Śledzenie postępów</string>
     <string name="lbl_total_pages">Całkowita liczba stron</string>
-    <string name="lbl_percentage_read">% czytaj</string>
+    <string name="lbl_percentage_read"
+            tools:ignore="StringFormatInvalid">% czytaj</string>
     <string name="lbl_track_progress">Postęp</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Musi być większa lub równa bieżącej stronie</string>
     <string name="info_builtin_style_asterix">(* style domyślne)</string>
