initial dnb commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -379,6 +379,7 @@
     <string name="site_description_dutch_comics_shopping">Dutch and more; Comics; Shop</string>
     <!-- website info: languages; type; specifics. -->
     <string name="site_description_english_catalogue">English and more; Catalogue</string>
+    <string name="site_description_german_catalogue">German; Catalog</string>
     <!-- website info: languages; type; specifics. -->
     <string name="site_description_english_catalogue_FSF">English and more; Catalogue; Fantasy and Science Fiction</string>
     <!-- website info: languages; type; specifics. -->
